# maticlib

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  base_client_model.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/: index.html
api/chunkers/: index.html
api/clients/: index.html
api/embeddings/: index.html
api/evaluation/: index.html
api/formatting/: index.html
api/graph/: index.html
api/io/: index.html
api/memory/: index.html
api/messages/: index.html
api/observability/: index.html
api/parsers/: index.html
api/pipelines/: index.html
api/prompts/: index.html
api/text2sql/: index.html
api/tools/: index.html
api/vectorstores/: index.html
docs/: examples.md  getting_started.md  index.md  mkdocs.yml  modules.md  release_notes.md  resources.md  response_parsers.md  roadmap.md  team.md
docs/api/: chunkers.md  clients.md  embeddings.md  evaluation.md  formatting.md  graph.md  index.md  io.md  memory.md  messages.md  observability.md  parsers.md  pipelines.md  prompts.md  text2sql.md  tools.md  vectorstores.md
docs/modules/: chunkers.md  clients.md  embeddings.md  evaluation.md  formatting.md  graph.md  index.md  io.md  messages.md  observability_resilience.md  parsers.md  pipelines.md  prompts_memory.md  text2sql.md  tools.md  vectorstores.md
examples/: 01_basic_chat.py  02_async_chat.py  03_sequential_graph.py  04_conditional_reporting.py  05_parallel_execution.py  06_typed_state.py  07_openai_only.py  08_pydantic_parsing.py  09_tool_calling.py  10_rag_basics.py  11_chunkers_and_loaders.py  12_text2sql_basics.py  13_prompts_and_observability.py  14_vectorstores_and_pipelines.py  15_chroma_vectorstore.py  16_milvus_vectorstore.py  17_milvus_server_vectorstore.py  18_evaluation_and_formatting.py  README.md  index.html
getting_started/: index.html
maticlib/: __init__.py  client.py  exceptions.py
maticlib/client/: __init__.py
maticlib/client/classes/: base_client.py  client_output_model.py
maticlib/core/client/: __init__.py  client.py
maticlib/core/evaluation/: __init__.py  evaluator.py  models.py
maticlib/embeddings/: __init__.py  base.py  google.py  mistral.py  models.py  openai.py
maticlib/graph/: __init__.py  graph.py  node.py
maticlib/io/: __init__.py  base.py  file.py  web.py
maticlib/llm/: __init__.py
maticlib/memory/: __init__.py  base.py  buffer.py
maticlib/messages/: __init__.py  ai_message.py  errors.py  human_message.py  message.py  system_message.py  types.py
maticlib/observability/: __init__.py  callbacks.py  trace.py
maticlib/pipelines/: __init__.py  rag_pipeline.py  text2sql_pipeline.py
maticlib/prompts/: __init__.py  base.py  registry.py
maticlib/resilience/: __init__.py  retry.py
maticlib/tools/: __init__.py  tool.py
maticlib/vectorstores/: __init__.py  base_index.py  chroma.py  config.py  in_memory.py  milvus.py  pinecone.py  qdrant.py  schema_index.py
modules/: index.html
modules/chunkers/: index.html
modules/clients/: index.html
modules/embeddings/: index.html
modules/evaluation/: index.html
modules/formatting/: index.html
modules/graph/: index.html
modules/io/: index.html
modules/messages/: index.html
modules/observability_resilience/: index.html
modules/parsers/: index.html
modules/pipelines/: index.html
modules/prompts_memory/: index.html
modules/text2sql/: index.html
modules/tools/: index.html
modules/vectorstores/: index.html
old-docs/: README.md  index.html
old-docs/css/: style.css
old-docs/js/: main.js  search.js
release_notes/: index.html
resources/: index.html
roadmap/: index.html
search/: search_index.json
team/: index.html
tests/: test_base_client.py  test_chunkers.py  test_client_parsing_integration.py  test_embeddings.py  test_formatting_and_evaluation.py  test_google_genai_client.py  test_io_loaders.py  test_memory.py  test_mistral_client.py  test_observability.py  test_openai_client.py  test_prompts.py  test_resilience.py  test_response_parsers.py  test_retrieval_and_pipelines.py  test_text2sql.py  test_tools.py  test_vector_indices.py  test_vectorstores.py
(+47 files in other folders)
