[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "maticlib"
version = "0.1.7"
description = "A Python Automation Library for Creating Agents"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Arvoh Software", email = "arvohsoft@gmail.com"}
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.28.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/arvohsoft/maticlib.git"
Repository = "https://github.com/arvohsoft/maticlib.git"